--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ aux_links:
 back_to_top: true
 back_to_top_text: "Back to top"
 
-  # Footer content 
+# Footer content 
 # appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2020 of this site by Bertram Simon.
+footer_content: "Copyright &copy; 2020 of this site by Bertram Simon."
 
 # Footer last edited timestamp
-last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
-last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+last_edit_timestamp: true
+last_edit_time_format: "%b %e %Y at %I:%M %p"
 
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
